[project]
name = "pyserverless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psycopg>=3.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.396",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]


[tool.ruff]
fix = true
line-length = 120


[tool.ruff.lint]
extend-select = ["I"]
select = ["ALL"]
ignore = [
    "COM812", # can cause conflicts with formatter (ruff says so)
    "D107", # no docstrings for inits
    "ANN401", # generic types are fine
    "D203", # conflicts with D211
    "D212" # conflicts with D213
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001", # no type hints
    "SLF001", # access to private members
    "ANN201", # no return type
    "S101", # allow assert
    "PLR2004", # magic values
    "D100", # no docstrings in test modules
    "D101", # no docstrings in test classes
    "INP001", # no implicit namespace package for tests
    "DTZ001", # no timezone info
    "DTZ005", # no timezone info
    "D205", # docstring summary on test functions
]

[tool.ruff.lint.isort]
known-first-party = ["pyserverless"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
addopts = "-v -n auto"
# --cov=src/pyserverless --cov-fail-under=90 --cov-branch --cov-report=term-missing


[tool.pyright]
include = ["src/pyserverless"]
